--- a/coreTracker.html
+++ b/coreTracker.html
@@ -98,10 +98,18 @@
         <button id="stopPlaybackBtn" disabled>Stop Playback</button>
         <button id="saveDataBtn">Save Path to LocalStorage</button>
         <button id="loadDataBtn">Load Path from LocalStorage</button>
+
+        <!-- New default view buttons -->
+        <button id="btnTopView">Top View</button>
+        <button id="btnFrontView">Front View</button>
+        <button id="btnSideView">Side View</button>
+        <button id="btnIsoView">Isometric View</button>
+
         <label for="speedRange">Playback Speed: <span id="speedDisplay">1x</span></label>
         <input type="range" id="speedRange" min="0.1" max="5" step="0.1" value="1" />
         <div id="status">Status: Waiting for video...</div>
     </div>
+
 
     <video id="video" autoplay playsinline></video>
     <canvas id="canvas" width="640" height="480" style="display:none;"></canvas>
@@ -598,12 +606,12 @@
                     return;
                 }
 
-                const zone = this.currentZone;
-                if (!zone) {
-                    alert('No zone detected.');
-                    return;
-                }
-
+                /*                 const zone = this.currentZone;
+                                if (!zone) {
+                                    alert('No zone detected.');
+                                    return;
+                                }
+                 */
                 const forkliftPos = this.forkliftPos.clone();
 
                 // Parameters for rack rows
@@ -619,8 +627,8 @@
 
                     // Check for existing floor items in the same zone close to forklift position (within item size)
                     const collision = this.storedItems.some(item =>
-                        item.zone === zone.name &&
-                        item.level === 'floor' &&
+/*                         item.zone === zone.name &&
+ */                        item.level === 'floor' &&
                         item.position.distanceTo(forkliftPos) < 0.3 // Assuming item size ~0.3
                     );
 
@@ -643,8 +651,8 @@
 
                     // Count how many items already in this row at this level and zone
                     const itemsInRow = this.storedItems.filter(item =>
-                        item.zone === zone.name &&
-                        item.level === level &&
+/*                         item.zone === zone.name &&
+ */                        item.level === level &&
                         Math.round(item.position.z / rowSpacingZ) === rowIndex
                     );
 
@@ -674,8 +682,8 @@
 
                     // Just in case, double check no collision at this position
                     const collision = this.storedItems.some(item =>
-                        item.zone === zone.name &&
-                        item.level === level &&
+/*                         item.zone === zone.name &&
+ */                        item.level === level &&
                         item.position.equals(itemPosition)
                     );
 
@@ -689,8 +697,8 @@
                 this.storedItems.push({
                     id: itemID,
                     position: itemPosition.clone(),
-                    zone: zone.name,
-                    level: level,
+/*                     zone: zone.name,
+ */                    level: level,
                     timestamp: new Date()
                 });
 
@@ -716,6 +724,8 @@
                 box.name = `Item-${itemID}`;
                 this.scene.add(box);
                 box.add(label);
+
+                console.log(itemPosition)
             }
 
 
@@ -856,6 +866,40 @@
             setPlaybackSpeed(speed) {
                 this.playbackSpeed = speed;
             }
+
+            setDefaultView(viewName) {
+                switch (viewName) {
+                    case 'top':
+                        this.camera.position.set(0, 30, 0);
+                        this.camera.up.set(0, 0, -1);
+                        this.camera.lookAt(0, 0, 0);
+                        break;
+
+                    case 'front':
+                        this.camera.position.set(0, 10, 30);
+                        this.camera.up.set(0, 1, 0);
+                        this.camera.lookAt(0, 0, 0);
+                        break;
+
+                    case 'side':
+                        this.camera.position.set(30, 10, 0);
+                        this.camera.up.set(0, 1, 0);
+                        this.camera.lookAt(0, 0, 0);
+                        break;
+
+                    case 'isometric':
+                        this.camera.position.set(20, 20, 20);
+                        this.camera.up.set(0, 1, 0);
+                        this.camera.lookAt(0, 0, 0);
+                        break;
+
+                    default:
+                        console.warn('Unknown view:', viewName);
+                }
+
+                this.controls.update();
+            }
+
         }
 
         // ==== Setup & Initialization ====
@@ -912,6 +956,12 @@
             tracker.setPlaybackSpeed(speed);
             speedDisplay.textContent = speed.toFixed(1) + 'x';
         });
+
+        document.getElementById('btnTopView').onclick = () => tracker.setDefaultView('top');
+        document.getElementById('btnFrontView').onclick = () => tracker.setDefaultView('front');
+        document.getElementById('btnSideView').onclick = () => tracker.setDefaultView('side');
+        document.getElementById('btnIsoView').onclick = () => tracker.setDefaultView('isometric');
+
 
         // Handle window resize
         window.addEventListener('resize', () => {
